<resources>
    <string name="app_name">test</string>
    <string name="buttontag">GET START</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabname">tabcat</string>
    <string name="title_activity_trainbooking">trainbooking</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">ATHER WICK</string>
    <string name="gmail">ather@gamil.com</string>
    <string name="support">Support</string>
    <string name="setting">Setting</string>
    <string name="login">LOG IN</string>
    <string name="logout">LOG OUT</string>
    <string name="productscroll">productscroll</string>
</resources>