<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profilelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".fragment.profileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:background="@drawable/topbackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gmail"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@id/mainusername"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/mainusername"
                        app:layout_constraintTop_toBottomOf="@id/mainusername" />

                    <TextView
                        android:id="@+id/mainusername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="0.555"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="131dp"
                        android:layout_height="114dp"
                        android:layout_marginTop="56dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/userimg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.432"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/userdetailsbgr"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="0.3333"
                            android:background="@drawable/graybrg"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="3dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:background="@drawable/circlebrg">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="5dp"
                                    android:src="@drawable/accountmangement"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto"
                                android:text="account management"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="0.3333"
                            android:background="@drawable/graybrg"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="3dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:background="@drawable/circlebrg">

                                <ImageView
                                    android:id="@+id/imageView9"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="5dp"
                                    android:src="@drawable/settings"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto"
                                android:text="@string/setting"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:layout_weight="0.3333"
                            android:background="@drawable/graybrg"
                            android:elevation="5dp"
                            android:orientation="vertical">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginLeft="3dp"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:background="@drawable/circlebrg">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="5dp"
                                    android:src="@drawable/support"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/roboto"
                                android:text="@string/support"
                                android:textAlignment="center"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>


                    <Button
                        android:id="@+id/logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/graybrg"
                        android:text="@string/logout" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
